# bmr4pml

./: .gitignore  LICENSE  README.md  env.yaml  pyproject.toml  setup.py
bmr4pml/: datasets.py  delta_f.py  inference.py  models.py  utils.py
bmr4pml/nn/: __init__.py  activations.py  lenet.py  mlp.py  resnet.py  utils.py  vit.py
notebooks/: image_classification_comparison.ipynb  optim.py  plot_comparison_results.ipynb  test_bayesian_loss.ipynb  test_ivon.ipynb  test_ivon_with_bmr.ipynb  test_mnist.ipynb  test_vadam.ipynb
notebooks/dinovit/: generate_embeddings.py  testing_dinov2.ipynb
notebooks/testing/: linear_regression_correlated_x copy.ipynb  linear_regression_correlated_x.ipynb
scripts/: image_classification.py
